<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <CheckBox
            android:id="@+id/moodCheckbox1"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/peaceful_string"
            app:layout_constraintEnd_toStartOf="@+id/mood_title"
            app:layout_constraintTop_toBottomOf="@+id/mood_title" />

        <CheckBox
            android:id="@+id/moodCheckbox2"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:text="@string/content_string"
            app:layout_constraintStart_toEndOf="@+id/mood_title"
            app:layout_constraintTop_toBottomOf="@+id/mood_title" />

        <CheckBox
            android:id="@+id/moodCheckbox3"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/stressed_string"
            app:layout_constraintStart_toStartOf="@+id/moodCheckbox1"
            app:layout_constraintTop_toBottomOf="@+id/moodCheckbox1" />

        <CheckBox
            android:id="@+id/moodCheckbox4"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/sad_string"
            app:layout_constraintEnd_toEndOf="@+id/moodCheckbox2"
            app:layout_constraintTop_toBottomOf="@+id/moodCheckbox2" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="166dp"
            android:layout_height="57dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/my_day_string"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/moodCheckbox5"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/bad_string"
            app:layout_constraintStart_toStartOf="@+id/moodCheckbox3"
            app:layout_constraintTop_toBottomOf="@+id/moodCheckbox3" />

        <TextView
            android:id="@+id/mood_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/mood_string"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:text="@string/challenges_string"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/moodCheckbox5" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/low_energy_string"
            app:layout_constraintStart_toStartOf="@+id/moodCheckbox5"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/loss_string"
            app:layout_constraintStart_toStartOf="@+id/checkBox3"
            app:layout_constraintTop_toBottomOf="@+id/checkBox3" />

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/work_string"
            app:layout_constraintStart_toStartOf="@+id/moodCheckbox4"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <CheckBox
            android:id="@+id/checkBox4"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/kids_string"
            app:layout_constraintStart_toStartOf="@+id/checkBox"
            app:layout_constraintTop_toBottomOf="@+id/checkBox" />

        <CheckBox
            android:id="@+id/checkBox5"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/giving_up_string"
            app:layout_constraintStart_toStartOf="@+id/checkBox4"
            app:layout_constraintTop_toBottomOf="@+id/checkBox4" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:text="@string/wish_list_string"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox5" />

        <CheckBox
            android:id="@+id/checkBox6"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/tokens_string"
            app:layout_constraintStart_toStartOf="@+id/checkBox7"
            app:layout_constraintTop_toBottomOf="@+id/checkBox9" />

        <CheckBox
            android:id="@+id/checkBox7"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/talk_string"
            app:layout_constraintStart_toStartOf="@+id/moodCheckbox5"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <CheckBox
            android:id="@+id/checkBox8"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/time_string"
            app:layout_constraintStart_toStartOf="@+id/moodCheckbox4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <CheckBox
            android:id="@+id/checkBox9"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/touch_string"
            app:layout_constraintStart_toStartOf="@+id/checkBox7"
            app:layout_constraintTop_toBottomOf="@+id/checkBox7" />

        <CheckBox
            android:id="@+id/checkBox10"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/tasks_string"
            app:layout_constraintStart_toStartOf="@+id/checkBox8"
            app:layout_constraintTop_toBottomOf="@+id/checkBox8" />

        <Button
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/submit_string"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox6"
            app:layout_constraintVertical_bias="0.0" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>